Bug 296303 - User pictures are not shown in greeters which support them
Summary: User pictures are not shown in greeters which support them
Status: RESOLVED FIXED
Alias: None
Product: lightdm
Classification: Plasma
Component: greeter (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-18 19:36 UTC by Luca Beltrame
Modified: 2012-12-11 19:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2012-03-18 19:36:18 UTC
Despite having a user image set in System Settings, this is not shown in the greeter. There's no clear indication on how this is done (or not) in the QML files.
Comment 1 David Edmundson 2012-04-22 23:09:23 UTC
Could you confirm for your user image is in the file 

~/.face OR ~/.face.icon

and that it loads correctly in gwenview.

Also please attach the greeter log file.

If you start lightdm with "lightdm -d" you should see a line like:
[+0.17s] DEBUG: Logging to /home/david/.cache/lightdm/log/x-15-greeter.log

This is the file, I need to see.
Comment 2 Luca Beltrame 2012-04-23 07:17:23 UTC
In data domenica 22 aprile 2012 23:09:23, hai scritto:

> Could you confirm for your user image is in the file
> ~/.face OR ~/.face.icon
> and that it loads correctly in gwenview.

I can confirm the presence of the .face.icon file and the fact that it's 
opening correctly in gwenview.

 However, due probably to local issues I cannot bring up the greeter in test 
mode. Is there a configuration option to set system-wide debug?
Comment 3 David Edmundson 2012-04-23 09:50:24 UTC
I also get the same issue when the avatar is in .face.icon. Confirming bug.

As a workaround rename .face.icon to .face and see if that makes a difference.
Comment 4 Aurelien Gateau 2012-04-23 09:52:07 UTC
Can you check if the bug is fixed in the v0.1 branch?
Comment 5 Aurelien Gateau 2012-04-25 07:20:07 UTC
Should be fixed in 0.1.1.
Comment 6 David Edmundson 2012-09-02 22:14:25 UTC
Reopening on behalf of Alin Elena.
Comment 7 David Edmundson 2012-09-02 22:25:05 UTC
Changing the filename to ".face" worked. Upstream must have broken the search for both parts.
Comment 8 David Edmundson 2012-10-13 00:41:49 UTC
Confirmed.

LightDM cleverly can load users from it's own method OR accountsService.

Whilst LightDM's own method works correctly, AccountService always returns ~/.face even if the file doesn't even exist.
Comment 9 tromzy 2012-10-24 18:50:22 UTC
The problem still occurs in Kubuntu 12.04. Renaming .face.icon to .face doesn't change anything.
Comment 10 tromzy 2012-10-24 18:50:51 UTC
I meant Kubuntu 12.10, sorry.
Comment 11 David Edmundson 2012-10-24 18:52:25 UTC
I'm surprised the renaming doesn't work. 

Could you open "~/.face" in gwenview, and check it loads.
Comment 12 tromzy 2012-10-25 07:29:05 UTC
I checked, it loads fine in Gwenview.

Also I couldn't change the wallpaper in LightDM because it was a picture in my /home. Putting it in /usr/share/wallpapers made it work. Could it be related ?
Comment 13 tromzy 2012-10-29 10:08:42 UTC
I solved it by chmoding the .face file.
Comment 14 David Edmundson 2012-12-11 17:15:02 UTC
Git commit 75bb4bb526f737a9372b58bd95106b75c19824a0 by David Edmundson.
Committed on 30/11/2012 at 07:04.
Pushed by davidedmundson into branch 'v0.3'.

Manually search for .face.icon files

This is a workaround for AccountService reporting the wrong path for the face icon

REVIEW: 107528

M  +14   -3    greeter/faceimageprovider.cpp

http://commits.kde.org/lightdm/75bb4bb526f737a9372b58bd95106b75c19824a0