Manually search for .face.icon files

This is a workaround for AccountService reporting the wrong path for the face icon

REVIEW: 107528
BUG: 296303